@@ -27,7 +27,7 @@ SYNOPSIS
     
         # install three new instances of perl, randomly
     
-        brewbuild --count 3
+        brewbuild --new 3
     
         # enable debugging, and run against all installed instances (can be used
         # in conjunction with all other args). Use 0-7 as the argument to it.
@@ -38,11 +38,11 @@ SYNOPSIS
         # remove all perl instances (less the currently used one), install two
         # new random versions, and run tests against all installed perls
     
-        brewbuild --remove --count 2
+        brewbuild --remove --new 2
     
         # install all available perl versions, and run tests against all of them
     
-        brewbuild --count -1
+        brewbuild --new -1
     
         # print usage information
     
